fix(ui): 'Fixing scrollbar color and styling'

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,41 @@
 @import './core/bootstrap.scss';
 
 @import 'components';
+
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* Lebar scrollbar */
+::-webkit-scrollbar {
+  width: .25rem;
+}
+
+/* Warna latar belakang track scrollbar */
+::-webkit-scrollbar-track {
+  background-color: $gray-100;
+  
+  @at-root [data-bs-theme=dark] & {
+    background-color: $gray-900;
+  }
+}
+
+/* Warna thumb scrollbar saat tidak dihover */
+::-webkit-scrollbar-thumb {
+  background-color: $gray-200;
+  
+  @at-root [data-bs-theme=dark] & {
+    background-color: $gray-700;
+  }
+}
+
+/* Warna thumb scrollbar saat dihover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: $gray-300;
+  
+  @at-root [data-bs-theme=dark] & {
+    background-color: $gray-600;
+  }
+}
